--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,9 @@ futures = "0.3.26"
 reqwest = { version = "0.11.14", features = ["json"] }
 reqwest-eventsource = "0.4.0"
 derive_builder = "0.12.0"
+backoff = {version = "0.4.0", features = ["tokio"] }
+tokio = { version = "1.25.0", features = ["fs", "macros"] }
 serde = { version = "1.0.152", features = ["derive", "rc"] }
 serde_json = "1.0.93"
+tracing = "0.1.37"
 thiserror = "1.0.38"
